№1166
добавлен сервис получения полной информации по субъекту.
добавленны тестовые данные